--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,45 @@
-.tasks h3 {
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    padding: 4vh 2vw;
+}
+
+h2 {
+    margin-bottom: 40px;
+    margin-left: 2vw;
+    height: auto;
+}
+
+.tasks h3.task-heading {
+    display: flex;
+    align-items: end;
+    gap: 14px;
+}
+
+.tasks h3 > span.task-title {
     text-decoration: underline;
 }
 
-.task-property-name {
+.tasks p.task-info {
+    margin: 14px 0px 30px;
+    line-height: 1.45;
+    font-size: 16px;
+}
+
+.tasks .markCompleted-btn {
+    position: relative;
+    width: 22px;
+    height: 22px;
+    border-style: dashed;
+    border-radius: 50px;
+    border-width: 2px;
+    border-color: rgb(71, 236, 71);
+}
+
+span.task-property-name {
     font-weight: 700;
 }
